--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FashionLife</string>
+    <string name="home">首页</string>
+    <string name="find">发现</string>
+    <string name="user">我的</string>
 </resources>
