--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FashionLife</string>
+    <string name="app_name">爱天气</string>
     <string name="home">首页</string>
     <string name="find">发现</string>
     <string name="user">我的</string>
